# app/Http/Controllers/ShipordersController.php
@@ -10,12 +10,14 @@ class ShipordersController extends Controller
     /**
      * @OA\Get(
      *     path="/shiporders",
-     *     summary="Get all shiporders",     
+     *     summary="Get all shiporders", 
+     *     security={ { "bearer_token": {} } },     
      *     tags={"ShipOrder"},     
      *     @OA\Response(
      *         response=200,
      *         description="ShipOrder",     
-     *         @OA\Schema(ref="#/components/schemas/ShipOrder", type="array"),     
+     *         @OA\Schema(ref="#/components/schemas/ShipOrder", type="array"),   
+     *         @OA\JsonContent()   
      *     )
      * )
      * 
@@ -29,7 +31,8 @@ class ShipordersController extends Controller
     /**
      * @OA\Get(
      *     path="/shiporders/{id}",
-     *     summary="Get shiporder by id",     
+     *     summary="Get shiporder by id",  
+     *     security={ { "bearer_token": {} } },    
      *     tags={"ShipOrder"},     
      *      @OA\Parameter(
      *         name="id",
@@ -41,7 +44,8 @@ class ShipordersController extends Controller
      *     @OA\Response(
      *         response=200,
      *         description="ShipOrder",     
-     *         @OA\Schema(ref="#/components/schemas/ShipOrder"),     
+     *         @OA\Schema(ref="#/components/schemas/ShipOrder"), 
+     *         @OA\JsonContent()     
      *     )
      * )
      * 
