# routes/api.php
@@ -14,15 +14,19 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
+/*
 Route::middleware('auth:api')->get('/user', function (Request $request) {    
     return $request->user();
 });
+*/
+
+
+Route::post('/login', "LoginController@index");
 
 Route::get('/importations', 'ImportationsController@all');
 Route::get('/importations/{id}', 'ImportationsController@show');
 
-Route::get('/people', 'PeopleController@all');
-Route::get('/people/{id}', 'PeopleController@show');
-
-Route::get('/shiporders', 'ShipordersController@all');
-Route::get('/shiporders/{id}', 'ShipordersController@show');
+Route::middleware('auth:sanctum')->get('/people', 'PeopleController@all');
+Route::middleware('auth:sanctum')->get('/people/{id}', 'PeopleController@show');
+Route::middleware('auth:sanctum')->get('/shiporders', 'ShipordersController@all');
+Route::middleware('auth:sanctum')->get('/shiporders/{id}', 'ShipordersController@show');
